@@ -4,13 +4,6 @@
 
 Java FX application to generate patterns made using Spirograph on a computer
 
-## To run the application
-1. Include Java FX jars to CLASSPATH
-2. Compile Java files and go to bin/main
-3. Execute the below command :
-
-java --module-path "C:/Program Files/OpenJDK/javafx-sdk-17.0.1/lib" --add-modules javafx.controls,javafx.fxml Main
-
 ## Features
 
 - Application is 1000x800 pixels in size and cannot be resized (atleast 1080p monitor is required)
